--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-none d-md-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container-fluid container-lg d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">delightpolytech@gmail.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i>+91-9966289000
+        <i class="bi bi-envelope-fill"></i><a href="mailto:delightpolytech@gmail.com">delightpolytech@gmail.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +91-9966289000
       </div>
       <div class="d-flex align-items-center">
         <div class="social-links d-none d-md-block">
