--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -42,16 +42,19 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-none d-md-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container-fluid container-lg d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
+        <i class="bi bi-envelope-fill"></i><a href="mailto:delightpolytech@gmail.com">delightpolytech@gmail.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +91-9966289000
       </div>
-      <div class="social-links d-none d-md-block">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+      <div class="d-flex align-items-center">
+        <div class="social-links d-none d-md-block">
+          <a href="#" aria-label="twitter" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#" aria-label="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        </div>
+        <button class="dealer-btn">FIND / BECOME A DEALER</button>
       </div>
     </div>
   </section>
