--- a/product-details/casing_pipes.html
+++ b/product-details/casing_pipes.html
@@ -34,11 +34,11 @@
 
     <!-- ======= Top Bar ======= -->
     <section id="topbar" class="d-none d-md-flex align-items-center">
-        <div class="container d-flex justify-content-center justify-content-md-between">
+        <div class="container-fluid container-lg d-flex justify-content-center justify-content-md-between">
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-envelope-fill"></i><a
                     href="mailto:delightpolytech@gmail.com">delightpolytech@gmail.com</a>
-                <i class="bi bi-phone-fill phone-icon"></i>+91-9966289000
+                <i class="bi bi-phone-fill phone-icon"></i> +91-9966289000
             </div>
             <div class="d-flex align-items-center">
                 <div class="social-links d-none d-md-block">
@@ -98,8 +98,8 @@
     <div class="container p-3 p-lg-5">
         <div class="row align-items-center">
             <div class="col-12 col-lg-4">
-                <img src="/assets/img/product/casing-pipe.jpg" width="600" height="500"
-                    class="img-fluid d-block m-auto" alt="casing-pipes" />
+                <img src="/assets/img/product/casing-pipe.jpg" width="600" height="500" class="img-fluid d-block m-auto"
+                    alt="casing-pipes" />
             </div>
             <div class="col-12 col-lg-8">
                 <p>Casing Pipes conforming to IS 12818:1992 These pipes are manufactured as per BIS standard and are
