--- a/career.html
+++ b/career.html
@@ -104,7 +104,7 @@
                 <h2 class="accordion-header">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#job1"
                     aria-expanded="true" aria-controls="job1">
-                    <strong>Operator</strong>
+                    <strong>Sales Executive</strong>
                   </button>
                 </h2>
                 <div id="job1" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
