fix: correct spelling of Cashing to Casing
Corrects a spelling error in the documentation where Cashing was mistakenly used instead of Casing.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="swiper-slide">
               <div class="icon-box  ">
                 <div class="icon"><img src="assets/img/product/casing-pipes.png" alt="casing-pipes" class="img-fluid">
-                  <h4 class="title"><a href="/product-details/casing_pipes.html">Cashing Pipes</a></h4>
+                  <h4 class="title"><a href="/product-details/casing_pipes.html">Casing Pipes</a></h4>
                   <p class="description">Casing Pipes conforming to IS 12818:1992 These pipes are manufactured as per
                     BIS standard and are available in deep blue colour.</p>
                   <a href="/product-details/casing_pipes.html"
