Replace Twitter 'bird' logo with 'X' logo
Updated SVG coordinates for the Twitter 'X' logo in all HTML footers and topbars.\nModified related style elements to accommodate the new logo.

--- a/product-details/swr_pipes_&_fittings.html
+++ b/product-details/swr_pipes_&_fittings.html
@@ -42,7 +42,11 @@
             </div>
             <div class="d-flex align-items-center">
                 <div class="social-links d-none d-md-block">
-                    <a href="#" aria-label="twitter" class="twitter"><i class="bi bi-twitter"></i></a>
+                    <a href="#" aria-label="twitter" class="twitter" height="23" width="39">
+                        <svg height="20" class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="15" viewBox="0 0 100 100">
+                          <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
+                        </svg>
+                    </a>
                     <a href="#" aria-label="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="#" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
                     <a href="#" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
@@ -162,7 +166,11 @@
                     <p>“India's one of the Leading Manufacturer and Exporter of Pipes, Fittings and Irrigation System”
                     </p>
                     <div class="social-links">
-                        <a href="#" aria-label="twitter" class="twitter"><i class="bx bxl-twitter"></i></a>
+                        <a href="#" aria-label="twitter" class="twitter" height="23" width="39">
+                            <svg height="20" class="bx bxl-twitter" xmlns="http://www.w3.org/2000/svg" width="15" viewBox="0 0 100 100">
+                              <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
+                            </svg>
+                        </a>
                         <a href="#" aria-label="facebook" class="facebook"><i class="bx bxl-facebook"></i></a>
                         <a href="#" aria-label="instagram" class="instagram"><i class="bx bxl-instagram"></i></a>
                         <a href="#" aria-label="linkedin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
