--- a/inner-page.html
+++ b/inner-page.html
@@ -48,7 +48,11 @@
         <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
       </div>
       <div class="social-links d-none d-md-block">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" aria-label="twitter" class="twitter" height="23" width="39">
+          <svg height="20" class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="15" viewBox="0 0 100 100">
+            <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
+          </svg>
+        </a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
@@ -121,7 +125,11 @@
       <h3>Delight Polytech</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" aria-label="twitter" class="twitter" height="23" width="39">
+          <svg height="20" class="bx bxl-twitter" xmlns="http://www.w3.org/2000/svg" width="15" viewBox="0 0 100 100">
+            <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
+          </svg>
+        </a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
