update: Add contact info and map links
- Replaced 'Shilpan Plaza' map address iframe with 'Delight Polytech' map address iframe
- Added map address links to address texts in all HTML footers
- Added phone dialing links to phone numbers in all HTML top bars
- Updated email, address, and phone number links in the contact.html file

--- a/product-details/column_pipes.html
+++ b/product-details/column_pipes.html
@@ -38,7 +38,7 @@
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-envelope-fill"></i><a
                     href="mailto:delightpolytech@gmail.com">delightpolytech@gmail.com</a>
-                <i class="bi bi-phone-fill phone-icon"></i> +91-9966289000
+                <a href="tel:9966289000" name="telephone"><i class="bi bi-phone-fill phone-icon"></i> +91-9966289000</a>
             </div>
             <div class="d-flex align-items-center">
                 <div class="social-links d-none d-md-block">
@@ -173,8 +173,10 @@
                     <h5>Contact Info</h5>
                     <p class="mb-3">If you have any questions or need help, feel free to contact with our team.</p>
                     <div class="mb-2">
-                        <strong>Address:</strong><br>
-                        <span>5, First Floor, Shilpan Plaza, Swaminarayan Chowk, Rajkot-360004</span>
+                        <a href="https://maps.app.goo.gl/M6pbemELWxiLAzdU6" target="_blank">
+                            <strong>Address:</strong><br>
+                            <span>5, First Floor, Shilpan Plaza, Swaminarayan Chowk, Rajkot-360004</span>
+                        </a>
                     </div>
                     <div class="mb-2">
                         <strong>Contact:</strong><br>
