--- a/inner-page.html
+++ b/inner-page.html
@@ -45,7 +45,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
+        <a href="tel:5589 55488 55" name="telephone"><i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55</a>
       </div>
       <div class="social-links d-none d-md-block">
         <a href="#" aria-label="twitter" class="twitter" height="23" width="39">
