--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -45,7 +45,7 @@
     <div class="container-fluid container-lg d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:delightpolytech@gmail.com">delightpolytech@gmail.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +91-9966289000
+        <a href="tel:9966289000" name="telephone"><i class="bi bi-phone-fill phone-icon"></i> +91-9966289000</a>
       </div>
       <div class="d-flex align-items-center">
         <div class="social-links d-none d-md-block">
