Add 'Find/Become a Dealer' button linking to Contact page
Added a prominent button in the navigation bar linking to the Contact page, facilitating easier access for users looking to inquire about dealership opportunities or contact us for business inquiries.

--- a/product-details/agricultural_pipes_&_fittings.html
+++ b/product-details/agricultural_pipes_&_fittings.html
@@ -47,7 +47,7 @@
                     <a href="#" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
                     <a href="#" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
                 </div>
-                <button class="dealer-btn">FIND / BECOME A DEALER</button>
+                <a href="contact.html"><button class="dealer-btn">FIND / BECOME A DEALER</button></a>
             </div>
         </div>
     </section>
