--- a/product-details/garden_hose_pipes.html
+++ b/product-details/garden_hose_pipes.html
@@ -47,7 +47,7 @@
                     <a href="#" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
                     <a href="#" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
                 </div>
-                <button class="dealer-btn">FIND / BECOME A DEALER</button>
+                <a href="contact.html"><button class="dealer-btn">FIND / BECOME A DEALER</button></a>
             </div>
         </div>
     </section>
