--- a/product-details/column_pipes.html
+++ b/product-details/column_pipes.html
@@ -47,9 +47,9 @@
                           <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
                         </svg>
                     </a>
-                    <a href="#" aria-label="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="#" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+                    <a href="https://www.facebook.com/people/Delights-Polytech/pfbid02enaHQT7PvE5F15zma4jFan2zxD9Z8nmAaZNtn9GqfLubJiCMF1YceNGxLUBkBs91l/?mibextid=ZbWKwL" target="_blank" aria-label="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/delightpolytech/" target="_blank" aria-label="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="https://in.linkedin.com/in/delight-polytech-aa2873310?original_referer=https%3A%2F%2Fduckduckgo.com%2F" target="_blank" aria-label="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
                 </div>
                 <button class="dealer-btn">FIND / BECOME A DEALER</button>
             </div>
@@ -136,9 +136,9 @@
                               <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z" transform="scale(0.3)"></path>
                             </svg>
                         </a>
-                        <a href="#" aria-label="facebook" class="facebook"><i class="bx bxl-facebook"></i></a>
-                        <a href="#" aria-label="instagram" class="instagram"><i class="bx bxl-instagram"></i></a>
-                        <a href="#" aria-label="linkedin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                        <a href="https://www.facebook.com/people/Delights-Polytech/pfbid02enaHQT7PvE5F15zma4jFan2zxD9Z8nmAaZNtn9GqfLubJiCMF1YceNGxLUBkBs91l/?mibextid=ZbWKwL" target="_blank" aria-label="facebook" class="facebook"><i class="bx bxl-facebook"></i></a>
+                        <a href="https://www.instagram.com/delightpolytech/" target="_blank" aria-label="instagram" class="instagram"><i class="bx bxl-instagram"></i></a>
+                        <a href="https://in.linkedin.com/in/delight-polytech-aa2873310?original_referer=https%3A%2F%2Fduckduckgo.com%2F" target="_blank" aria-label="linkedin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                     </div>
                     <div class="pb-4">
                         <a href="https://www.indiamart.com/delightpolytech/" target="_blank" name="indiamart">
